--- a/index.html
+++ b/index.html
@@ -215,6 +215,13 @@ option = {
       data: dataSZ,
       smooth: true
     },
+     {
+      name: '石家庄',
+      type: 'parallel',
+      lineStyle: lineStyle,
+      data: dataSJZ,
+      smooth: true
+    },
     {
       name: '上海',
       type: 'parallel',
