--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<?php
+header('P3P: CP="CAO PSA OUR"');
+?>
 <!DOCTYPE html>
 <html lang="zh-CN" style="height: 100%">
 <head>
@@ -5,7 +8,7 @@
 </head>
 <body style="height: 100%; margin: 0">
   <div id="container" style="height: 100%"></div>
-header("P3P:CAO PSA OUR")
+
   
   <script type="text/javascript" src="https://fastly.jsdelivr.net/npm/echarts@5.4.3/dist/echarts.min.js"></script>
   <!-- Uncomment this line if you want to dataTool extension
