--- a/pie.html
+++ b/pie.html
@@ -34,9 +34,11 @@
     });
     var app = {};
     
+        
     option = {
   
-  color:["#4992ff","#ff6e76","#98d8c3","#7998b5","#f5e655","#f5f7d0","#e3f0f9","#fecbaf","#a683e2"],
+  color:["#87ADC9","#d97992","#F8E285","#5365af","#f1f7ea","#98d8c3","#bfbcd2","#bdddf1","#f5f7d0"],
+    //"#87ADC9","#ff6e76","#98d8c3","#7998b5","#f5e655","#f5f7d0","#e3f0f9","#bdddf1","#a683e2"
   title: {
     text: '2022年城轨交通运营线路制式结构',
     subtext: '数据来源：城市轨道交通2022年度统计和分析报告（单位：公里）',
