--- a/pielast.html
+++ b/pielast.html
@@ -43,10 +43,10 @@
     text: '2022年城轨交通运营线路制式结构',
     left: 'center',
     textStyle:{
-      color:"white"
+      color:"#1A1C1E"
     },
     subtextStyle:{
-      color:"white"
+      color:"#1A1C1E"
     }
   },
     legend: {
@@ -54,7 +54,7 @@
     left: "15%",
     y:"center",
     textStyle:{
-                color: 'white'//字体颜色
+                color: '#1A1C1E'//字体颜色
            }
   },
   tooltip: {
