--- a/pielast.html
+++ b/pielast.html
@@ -103,7 +103,7 @@
           show: true,
           fontSize: 40,
           fontWeight: 'bold',
-          color:"white"
+          color:"#1A1C1E"
         }
       },
       labelLine: {
